got to step before filling QP programming matrix

--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -18,10 +18,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "15b86ea2-d6e4-40d1-9415-5313293a3c62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "pybullet build time: Sep 26 2024 14:51:37\n"
+     ]
+    }
+   ],
    "source": [
     "#In the following we import the classes that we need for simulation\n",
     "import time\n",
@@ -46,10 +54,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ebf96315",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2079102557.py, line 46)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 46\u001b[0;36m\u001b[0m\n\u001b[0;31m    SigmaNoM =  # todo: #nominal sigma (function of NominalStepDuration)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# todo: First start to fill and complete the DCMTrajectoryGenerator based on equation (3) and (9) of the project description\n",
     "#then continue with the following part\n",
@@ -71,7 +88,7 @@
     "ControlInputsToy = list(\"\")\n",
     "\n",
     " \n",
-    "DCMGenerator = # todo: #We create an object of DCMTrajectoryGenerator Class\n",
+    "DCMGenerator = DCMTrajectoryGenerator() # todo: #We create an object of DCMTrajectoryGenerator Class\n",
     "DCMGenerator.initialDCM = np.array([DCMx ,DCMy])\n",
     "DCMGenerator.timeStep = dt_toy\n",
     "DCMGenerator.CoM = np.array([DCMx ,DCMy])\n",
@@ -96,7 +113,7 @@
     "    \n",
     "    OffsetNoMX = 0.03 #nominal DCM x offset\n",
     "    OffsetNoMY = -1*sign*0.01 #nominal DCM  y offset\n",
-    "    SigmaNoM =  # todo: #nominal sigma (function of NominalStepDuration)\n",
+    "    SigmaNoM = math.exp(DCMGenerator.omega * NominalStepDuration) # todo: #nominal sigma (function of NominalStepDuration)\n",
     "\n",
     "    #make a boundry limit for the next step position and duration \n",
     "    CoPTMaxX = CoPNoMX+0.4 #next step position maximum constraits for x\n",
@@ -105,8 +122,8 @@
     "    CoPTMinX = CoPNoMX-0.4 #next step position minimum constrait for x\n",
     "    CoPTMinY = CoPNoMY-0.4 #next step position minimum constrait for y\n",
     "    \n",
-    "    SigmaMin =  # todo: use NominalStepDuration and deltaStepDurationMin\n",
-    "    SigmaMax =  # todo: use NominalStepDuration and deltaStepDurationMax\n",
+    "    SigmaMin = math.exp(DCMGenerator.omega * (NominalStepDuration - deltaStepDurationMin)) # todo: use NominalStepDuration and deltaStepDurationMin\n",
+    "    SigmaMax = math.exp(DCMGenerator.omega * (NominalStepDuration + deltaStepDurationMax)) # todo: use NominalStepDuration and deltaStepDurationMax\n",
     "        \n",
     "    CopXInit = CoPX\n",
     "    DCMXInit = DCMx\n",
@@ -660,7 +677,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
