--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -132,14 +132,22 @@
     "\n",
     "    DCMGenerator.CoP = np.array([CoPX ,CoPY]) #update the initial CoP position in the DCMTrajectoryGenerator\n",
     "    \n",
-    "    \n",
     "    #make Hessian, Gradient and Constraints matrix of QP based on equations 13,14,15 and 16, \n",
     "    #you can expand these equations to find the follwoing matrices \n",
     "    P = np.array([])# todo: use equation 14 and 16 to find the P and Q\n",
     "    q = np.array([]) # todo: use equation 14 and 16 to find the P and Q\n",
     "    \n",
-    "    G = np.array([]) # todo: use equation 15 and 16 to find the G and h \n",
-    "    h = np.array([]) # todo: use equation 15 and 16 to find the G and h\n",
+    "    # Define identity matrices and zeros as per the inequality constraints\n",
+    "    I2 = np.eye(2)  # 2x2 Identity matrix\n",
+    "    I1 = np.eye(1)  # 1x1 Identity matrix\n",
+    "    \n",
+    "    G = np.block([\n",
+    "        [ I2, np.zeros((2, 1)), np.zeros((2, 2))],\n",
+    "        [-I2, np.zeros((2, 1)), np.zeros((2, 2))],\n",
+    "        [np.zeros((1, 2)), I1, np.zeros((1, 2))],\n",
+    "        [np.zeros((1, 2)), -I1, np.zeros((1, 2))]\n",
+    "    ])\n",
+    "    h = np.array([[CoPTMaxX,CoPTMaxY],[-CoPTMinX,-CoPTMinY],SigmaMax, -SigmaMin]) # todo: use equation 15 and 16 to find the G and h\n",
     "    \n",
     "    A = np.array([])# todo: use equation 13 and 16 to find the A and b \n",
     "    b = np.array([]) # todo: use equation 13 and 16 to find the A and b \n",
