--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -54,16 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "ebf96315",
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (2079102557.py, line 46)",
+     "evalue": "invalid syntax (1813023367.py, line 88)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 46\u001b[0;36m\u001b[0m\n\u001b[0;31m    SigmaNoM =  # todo: #nominal sigma (function of NominalStepDuration)\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 88\u001b[1;36m\u001b[0m\n\u001b[1;33m    stepDuration =  #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
     "ControlInputsToy = list(\"\")\n",
     "\n",
     " \n",
-    "DCMGenerator = DCMTrajectoryGenerator() # todo: #We create an object of DCMTrajectoryGenerator Class\n",
+    "DCMGenerator = DCMTrajectoryGenerator(CoMHeight) # todo: #We create an object of DCMTrajectoryGenerator Class\n",
     "DCMGenerator.initialDCM = np.array([DCMx ,DCMy])\n",
     "DCMGenerator.timeStep = dt_toy\n",
     "DCMGenerator.CoM = np.array([DCMx ,DCMy])\n",
@@ -134,8 +134,22 @@
     "    \n",
     "    #make Hessian, Gradient and Constraints matrix of QP based on equations 13,14,15 and 16, \n",
     "    #you can expand these equations to find the follwoing matrices \n",
-    "    P = np.array([])# todo: use equation 14 and 16 to find the P and Q\n",
-    "    q = np.array([]) # todo: use equation 14 and 16 to find the P and Q\n",
+    "    P = np.array([\n",
+    "        [2 * alphaCoPX, 0, 0, 0, 0],\n",
+    "        [0, 2 * alphaCoPY, 0, 0, 0],\n",
+    "        [0, 0, 2 * alphaSigma, 0, 0],\n",
+    "        [0, 0, 0, 2 * alphaOffsetX, 0],\n",
+    "        [0, 0, 0, 0, 2 * alphaOffsetY]\n",
+    "    ])\n",
+    "\n",
+    "    # Create the q vector\n",
+    "    q = np.array([\n",
+    "        -2 * alphaCoPX * CoPNoMX,\n",
+    "        -2 * alphaCoPY * CoPNoMY,\n",
+    "        -2 * alphaSigma * np.exp(DCMGenerator.omega*NominalStepDuration),\n",
+    "        -2 * alphaOffsetX * OffsetNoMX,\n",
+    "        -2 * alphaOffsetY * OffsetNoMY\n",
+    "    ])\n",
     "    \n",
     "    # Define identity matrices and zeros as per the inequality constraints\n",
     "    I2 = np.eye(2)  # 2x2 Identity matrix\n",
