--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -161,10 +161,10 @@
     "        [np.zeros((1, 2)), I1, np.zeros((1, 2))],\n",
     "        [np.zeros((1, 2)), -I1, np.zeros((1, 2))]\n",
     "    ])\n",
-    "    h = np.array([[CoPTMaxX,CoPTMaxY],[-CoPTMinX,-CoPTMinY],SigmaMax, -SigmaMin]) # todo: use equation 15 and 16 to find the G and h\n",
+    "    h = np.array([CoPTMaxX,CoPTMaxY,-CoPTMinX,-CoPTMinY,SigmaMax, -SigmaMin]) # todo: use equation 15 and 16 to find the G and h\n",
     "    \n",
-    "    A = np.array([])# todo: use equation 13 and 16 to find the A and b \n",
-    "    b = np.array([]) # todo: use equation 13 and 16 to find the A and b \n",
+    "    A = np.array([[1.0, 0.0, CopXInit - DCMXInit, 1.0, 0.0],[0.0, 1.0, CopYInit - DCMYInit, 0.0, 1.0]])# todo: use equation 13 and 16 to find the A and b \n",
+    "    b = np.array([CopXInit, CopYInit]) # todo: use equation 13 and 16 to find the A and b \n",
     "    \n",
     "    #solve QP problem U is the vector of optimized parameters\n",
     "    U = solve_qp(P, q, G, h, A, b, solver=\"osqp\")\n",
