P and q matrix fix

--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -135,20 +135,20 @@
     "    #make Hessian, Gradient and Constraints matrix of QP based on equations 13,14,15 and 16, \n",
     "    #you can expand these equations to find the follwoing matrices \n",
     "    P = np.array([\n",
-    "        [2 * alphaCoPX, 0, 0, 0, 0],\n",
-    "        [0, 2 * alphaCoPY, 0, 0, 0],\n",
-    "        [0, 0, 2 * alphaSigma, 0, 0],\n",
-    "        [0, 0, 0, 2 * alphaOffsetX, 0],\n",
-    "        [0, 0, 0, 0, 2 * alphaOffsetY]\n",
+    "        [alphaCoPX, 0, 0, 0, 0],\n",
+    "        [0, alphaCoPY, 0, 0, 0],\n",
+    "        [0, 0, alphaSigma, 0, 0],\n",
+    "        [0, 0, 0, alphaOffsetX, 0],\n",
+    "        [0, 0, 0, 0, alphaOffsetY]\n",
     "    ])\n",
     "\n",
     "    # Create the q vector\n",
     "    q = np.array([\n",
-    "        -2 * alphaCoPX * CoPNoMX,\n",
-    "        -2 * alphaCoPY * CoPNoMY,\n",
-    "        -2 * alphaSigma * np.exp(DCMGenerator.omega*NominalStepDuration),\n",
-    "        -2 * alphaOffsetX * OffsetNoMX,\n",
-    "        -2 * alphaOffsetY * OffsetNoMY\n",
+    "        alphaCoPX * CoPNoMX,\n",
+    "        alphaCoPY * CoPNoMY,\n",
+    "        alphaSigma * SigmaNoM,\n",
+    "        alphaOffsetX * OffsetNoMX,\n",
+    "        alphaOffsetY * OffsetNoMY\n",
     "    ])\n",
     "    \n",
     "    # Define identity matrices and zeros as per the inequality constraints\n",
