--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -163,13 +163,13 @@
     "    ])\n",
     "    h = np.array([CoPTMaxX,CoPTMaxY,-CoPTMinX,-CoPTMinY,SigmaMax, -SigmaMin]) # todo: use equation 15 and 16 to find the G and h\n",
     "    \n",
-    "    A = np.array([[1.0, 0.0, CopXInit - DCMXInit, 1.0, 0.0],[0.0, 1.0, CopYInit - DCMYInit, 0.0, 1.0]])# todo: use equation 13 and 16 to find the A and b \n",
+    "    A = np.array([[1, 0, CopXInit - DCMXInit, 1, 0],[0, 1, CopYInit - DCMYInit, 0, 1]])# todo: use equation 13 and 16 to find the A and b \n",
     "    b = np.array([CopXInit, CopYInit]) # todo: use equation 13 and 16 to find the A and b \n",
     "    \n",
     "    #solve QP problem U is the vector of optimized parameters\n",
     "    U = solve_qp(P, q, G, h, A, b, solver=\"osqp\")\n",
     "\n",
-    "    stepDuration =  #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
+    "    stepDuration =  math.log(U[2])/DCMGenerator.omega #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
     "    \n",
     "   \n",
     "    DesiredDCM = DCMGenerator.getDCMTrajectory(dt_toy)  #get the desired DCM for the next time-step \n",
