--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -18,18 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "15b86ea2-d6e4-40d1-9415-5313293a3c62",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "pybullet build time: Sep 26 2024 14:51:37\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#In the following we import the classes that we need for simulation\n",
     "import time\n",
@@ -54,16 +46,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "id": "ebf96315",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1813023367.py, line 88)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[12], line 88\u001b[1;36m\u001b[0m\n\u001b[1;33m    stepDuration =  #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\u001b[0m\n\u001b[1;37m                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/conversions/ensure_sparse_matrices.py:24: UserWarning: Converted P to scipy.sparse.csc.csc_matrix\n",
+      "For best performance, build P as a scipy.sparse.csc_matrix rather than as a numpy.ndarray\n",
+      "  warnings.warn(\n",
+      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/conversions/ensure_sparse_matrices.py:24: UserWarning: Converted G to scipy.sparse.csc.csc_matrix\n",
+      "For best performance, build G as a scipy.sparse.csc_matrix rather than as a numpy.ndarray\n",
+      "  warnings.warn(\n",
+      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/conversions/ensure_sparse_matrices.py:24: UserWarning: Converted A to scipy.sparse.csc.csc_matrix\n",
+      "For best performance, build A as a scipy.sparse.csc_matrix rather than as a numpy.ndarray\n",
+      "  warnings.warn(\n",
+      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/solvers/osqp_.py:147: UserWarning: OSQP exited with status 'primal infeasible'\n",
+      "  warnings.warn(f\"OSQP exited with status '{res.info.status}'\")\n"
      ]
     }
    ],
@@ -169,9 +170,9 @@
     "    #solve QP problem U is the vector of optimized parameters\n",
     "    U = solve_qp(P, q, G, h, A, b, solver=\"osqp\")\n",
     "\n",
-    "    stepDuration =  math.log(U[2])/DCMGenerator.omega #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
+    "    if U is not None:\n",
+    "        stepDuration =  math.log(U[2])/(math.sqrt(9.81/CoMHeight)) #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
     "    \n",
-    "   \n",
     "    DesiredDCM = DCMGenerator.getDCMTrajectory(dt_toy)  #get the desired DCM for the next time-step \n",
     "    DesiredCoM = DCMGenerator.getCoM() #get the desired CoM for the next time-step \n",
     "         \n",
@@ -189,12 +190,15 @@
     "    if(dt_toy*internalStep>stepDuration):\n",
     "        stepNumber=stepNumber+1\n",
     "        internalStep=0\n",
-    "        DCMGenerator.CoP= np.array([U[0] ,U[1]])\n",
-    "        sign=sign*-1\n",
-    "    \n",
-    "        CoPX =U[0]\n",
-    "        CoPY =U[1]\n",
+    "        if U is not None:\n",
+    "            DCMGenerator.CoP= np.array([U[0] ,U[1]])\n",
     "\n",
+    "        sign=sign*-1\n",
+    "\n",
+    "        if U is not None:\n",
+    "            CoPX =U[0]\n",
+    "            CoPY =U[1]\n",
+    "        \n",
     "        DCMx =DesiredDCM[0]\n",
     "        DCMy =DesiredDCM[1]\n",
     "        \n",
