--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "ebf96315",
    "metadata": {},
    "outputs": [
@@ -54,17 +54,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/conversions/ensure_sparse_matrices.py:24: UserWarning: Converted P to scipy.sparse.csc.csc_matrix\n",
+      "c:\\Users\\Bosstala\\.conda\\envs\\lr24\\Lib\\site-packages\\qpsolvers\\conversions\\ensure_sparse_matrices.py:24: UserWarning: Converted P to scipy.sparse.csc.csc_matrix\n",
       "For best performance, build P as a scipy.sparse.csc_matrix rather than as a numpy.ndarray\n",
       "  warnings.warn(\n",
-      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/conversions/ensure_sparse_matrices.py:24: UserWarning: Converted G to scipy.sparse.csc.csc_matrix\n",
+      "c:\\Users\\Bosstala\\.conda\\envs\\lr24\\Lib\\site-packages\\qpsolvers\\conversions\\ensure_sparse_matrices.py:24: UserWarning: Converted G to scipy.sparse.csc.csc_matrix\n",
       "For best performance, build G as a scipy.sparse.csc_matrix rather than as a numpy.ndarray\n",
       "  warnings.warn(\n",
-      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/conversions/ensure_sparse_matrices.py:24: UserWarning: Converted A to scipy.sparse.csc.csc_matrix\n",
+      "c:\\Users\\Bosstala\\.conda\\envs\\lr24\\Lib\\site-packages\\qpsolvers\\conversions\\ensure_sparse_matrices.py:24: UserWarning: Converted A to scipy.sparse.csc.csc_matrix\n",
       "For best performance, build A as a scipy.sparse.csc_matrix rather than as a numpy.ndarray\n",
       "  warnings.warn(\n",
-      "/home/micdev/Documents/EPFL/Legged Robots/Project_1/venv_legged_robots/lib/python3.12/site-packages/qpsolvers/solvers/osqp_.py:147: UserWarning: OSQP exited with status 'primal infeasible'\n",
+      "c:\\Users\\Bosstala\\.conda\\envs\\lr24\\Lib\\site-packages\\qpsolvers\\solvers\\osqp_.py:147: UserWarning: OSQP exited with status 'primal infeasible'\n",
       "  warnings.warn(f\"OSQP exited with status '{res.info.status}'\")\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 101\u001b[0m\n\u001b[0;32m     98\u001b[0m \u001b[38;5;66;03m#solve QP problem U is the vector of optimized parameters\u001b[39;00m\n\u001b[0;32m     99\u001b[0m U \u001b[38;5;241m=\u001b[39m solve_qp(P, q, G, h, A, b, solver\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mosqp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m--> 101\u001b[0m stepDuration \u001b[38;5;241m=\u001b[39m  math\u001b[38;5;241m.\u001b[39mlog(\u001b[43mU\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m]\u001b[49m)\u001b[38;5;241m/\u001b[39mDCMGenerator\u001b[38;5;241m.\u001b[39momega \u001b[38;5;66;03m#todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\u001b[39;00m\n\u001b[0;32m    103\u001b[0m DesiredDCM \u001b[38;5;241m=\u001b[39m DCMGenerator\u001b[38;5;241m.\u001b[39mgetDCMTrajectory(dt_toy)  \u001b[38;5;66;03m#get the desired DCM for the next time-step \u001b[39;00m\n\u001b[0;32m    104\u001b[0m DesiredCoM \u001b[38;5;241m=\u001b[39m DCMGenerator\u001b[38;5;241m.\u001b[39mgetCoM() \u001b[38;5;66;03m#get the desired CoM for the next time-step  \u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
      ]
     }
    ],
@@ -152,9 +163,8 @@
     "        alphaOffsetY * OffsetNoMY\n",
     "    ])\n",
     "    \n",
-    "    # Define identity matrices and zeros as per the inequality constraints\n",
-    "    I2 = np.eye(2)  # 2x2 Identity matrix\n",
-    "    I1 = np.eye(1)  # 1x1 Identity matrix\n",
+    "    I2 = np.eye(2)\n",
+    "    I1 = np.eye(1)\n",
     "    \n",
     "    G = np.block([\n",
     "        [ I2, np.zeros((2, 1)), np.zeros((2, 2))],\n",
@@ -171,56 +181,53 @@
     "    U = solve_qp(P, q, G, h, A, b, solver=\"osqp\")\n",
     "\n",
     "    if U is not None:\n",
-    "        stepDuration =  math.log(U[2])/(math.sqrt(9.81/CoMHeight)) #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
+    "        stepDuration =  math.log(U[2])/DCMGenerator.omega #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
     "    \n",
-    "    DesiredDCM = DCMGenerator.getDCMTrajectory(dt_toy)  #get the desired DCM for the next time-step \n",
-    "    DesiredCoM = DCMGenerator.getCoM() #get the desired CoM for the next time-step \n",
-    "         \n",
+    "        DesiredDCM = DCMGenerator.getDCMTrajectory(dt_toy)  #get the desired DCM for the next time-step \n",
+    "        DesiredCoM = DCMGenerator.getCoM() #get the desired CoM for the next time-step  \n",
+    "            \n",
+    "        DCMGenerator.initialDCM = np.array([DesiredDCM[0] ,DesiredDCM[1]])#set the current DCM position ad next initial dcm position \n",
     "        \n",
-    "    DCMGenerator.initialDCM = np.array([DesiredDCM[0] ,DesiredDCM[1]])#set the current DCM position ad next initial dcm position \n",
-    "    \n",
-    "    DCMTrajectoryToy.append(DesiredDCM)\n",
-    "    CoMTrajectoryToy.append(DesiredCoM)\n",
-    "    CoPTrajectoryToy.append(np.array([CoPX,CoPY]))\n",
-    "    ControlInputsToy.append(U)\n",
-    "    \n",
-    "    internalStep = internalStep+1 #is used for resetting the step parameters\n",
-    "    \n",
-    "    #resetting step parameters when step duration is finished\n",
-    "    if(dt_toy*internalStep>stepDuration):\n",
-    "        stepNumber=stepNumber+1\n",
-    "        internalStep=0\n",
-    "        if U is not None:\n",
+    "        DCMTrajectoryToy.append(DesiredDCM)\n",
+    "        CoMTrajectoryToy.append(DesiredCoM)\n",
+    "        CoPTrajectoryToy.append(np.array([CoPX,CoPY]))\n",
+    "        ControlInputsToy.append(U)\n",
+    "        \n",
+    "        internalStep = internalStep+1 #is used for resetting the step parameters\n",
+    "        \n",
+    "        #resetting step parameters when step duration is finished\n",
+    "        if(dt_toy*internalStep>stepDuration):\n",
+    "            stepNumber=stepNumber+1\n",
+    "            internalStep=0\n",
     "            DCMGenerator.CoP= np.array([U[0] ,U[1]])\n",
     "\n",
-    "        sign=sign*-1\n",
+    "            sign=sign*-1\n",
     "\n",
-    "        if U is not None:\n",
     "            CoPX =U[0]\n",
     "            CoPY =U[1]\n",
-    "        \n",
-    "        DCMx =DesiredDCM[0]\n",
-    "        DCMy =DesiredDCM[1]\n",
+    "            \n",
+    "            DCMx =DesiredDCM[0]\n",
+    "            DCMy =DesiredDCM[1]\n",
     "        \n",
     "  \n",
     "# todo: uncomment to plot         \n",
-    "# figg, (ax) = plt.subplots(figsize = (14, 7))\n",
-    "# ax.plot(np.array(DCMTrajectoryToy)[:,0],'b',label=\"DCM\")\n",
-    "# ax.plot(np.array(CoMTrajectoryToy)[:,0],'g',label=\"CoM\")\n",
-    "# ax.plot(np.array(CoPTrajectoryToy)[:,0],'r',label=\"Cop\")\n",
-    "# plt.show() \n",
+    "figg, (ax) = plt.subplots(figsize = (14, 7))\n",
+    "ax.plot(np.array(DCMTrajectoryToy)[:,0],'b',label=\"DCM\")\n",
+    "ax.plot(np.array(CoMTrajectoryToy)[:,0],'g',label=\"CoM\")\n",
+    "ax.plot(np.array(CoPTrajectoryToy)[:,0],'r',label=\"Cop\")\n",
+    "plt.show() \n",
     "\n",
-    "# figg1, (ax1) = plt.subplots(figsize = (14, 7))\n",
-    "# ax1.plot(np.array(DCMTrajectoryToy)[:,1],'b',label=\"DCM\")\n",
-    "# ax1.plot(np.array(CoMTrajectoryToy)[:,1],'g',label=\"CoM\")\n",
-    "# ax1.plot(np.array(CoPTrajectoryToy)[:,1],'r',label=\"Cop\")\n",
-    "# plt.show() \n",
+    "figg1, (ax1) = plt.subplots(figsize = (14, 7))\n",
+    "ax1.plot(np.array(DCMTrajectoryToy)[:,1],'b',label=\"DCM\")\n",
+    "ax1.plot(np.array(CoMTrajectoryToy)[:,1],'g',label=\"CoM\")\n",
+    "ax1.plot(np.array(CoPTrajectoryToy)[:,1],'r',label=\"Cop\")\n",
+    "plt.show() \n",
     "\n",
-    "# figg2, (ax2) = plt.subplots(figsize = (14, 7))\n",
-    "# ax2.plot(np.array(DCMTrajectoryToy)[:,0],np.array(DCMTrajectoryToy)[:,1],'b',label=\"DCM\")\n",
-    "# ax2.plot(np.array(CoMTrajectoryToy)[:,0],np.array(CoMTrajectoryToy)[:,1],'g',label=\"CoM\")\n",
-    "# ax2.plot(np.array(CoPTrajectoryToy)[:,0],np.array(CoPTrajectoryToy)[:,1],'*r',label=\"CoP\")\n",
-    "# plt.show() \n"
+    "figg2, (ax2) = plt.subplots(figsize = (14, 7))\n",
+    "ax2.plot(np.array(DCMTrajectoryToy)[:,0],np.array(DCMTrajectoryToy)[:,1],'b',label=\"DCM\")\n",
+    "ax2.plot(np.array(CoMTrajectoryToy)[:,0],np.array(CoMTrajectoryToy)[:,1],'g',label=\"CoM\")\n",
+    "ax2.plot(np.array(CoPTrajectoryToy)[:,0],np.array(CoPTrajectoryToy)[:,1],'*r',label=\"CoP\")\n",
+    "plt.show() \n"
    ]
   },
   {
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b0a08563",
    "metadata": {},
    "outputs": [],
@@ -253,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "e3436363",
    "metadata": {},
    "outputs": [],
@@ -296,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f989c916",
    "metadata": {},
    "outputs": [],
@@ -371,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c2fd1a9b",
    "metadata": {},
    "outputs": [],
@@ -386,7 +393,7 @@
     "AtlasUtils = RobotUtils()\n",
     "CoMPoS, robotOrn =  p.getBasePositionAndOrientation(robotID) #todo: receive the base position and orientation (use pybullet documentation for finding the related function) \n",
     "CoMVel,_ = p.getBaseVelocity(robotID) #todo: receive the base velocity \n",
-    "DCM0 =  CoMPoS+np.asarray(CoMVel)/math.sqrt(9.81/CoMHeight) #todo: set DCM position based on CoM position and CoM velocity (assume CoM is on the center of base (pelvis)\n",
+    "DCM0 =  CoMPoS+np.asarray(CoMVel)/math.sqrt(9.81/CoMHeight)  #todo: set DCM position based on CoM position and CoM velocity (assume CoM is on the center of base (pelvis)\n",
     "CoM0 = np.asarray(CoMPoS)\n",
     "\n",
     "CoPX=p.getLinkState(robotID,29)[0][0] #initial CoP position in y direction (Right foot position specifies first CoP)\n",
@@ -447,10 +454,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "aac3700b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1642604484.py, line 54)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 54\u001b[1;36m\u001b[0m\n\u001b[1;33m    SigmaNoM =   #todo: #nominal sigma (function of NominalStepDuration)\u001b[0m\n\u001b[1;37m                 ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "iter = 0\n",
@@ -473,12 +489,12 @@
     "      force2 = np.array([0 ,1403 ,0])\n",
     "      p.applyExternalForce(objectUniqueId=gemId2, linkIndex=-1,forceObj=force2, posObj=gemPos2, flags=p.WORLD_FRAME)\n",
     "\n",
-    "   DesiredDCM =  #todo: get the desired DCM for the next time-step \n",
-    "   DesiredCoM =  #todo: get the desired CoM for the next time-step \n",
+    "   DesiredDCM =  DCMGenerator.getDCMTrajectory(dt) #todo: get the desired DCM for the next time-step \n",
+    "   DesiredCoM =  DCMGenerator.getCoM() #todo: get the desired CoM for the next time-step \n",
     "   DesiredCoM3d = np.append(DesiredCoM - CoM0[:2] , DCMGenerator.CoMHeight) #make a 3d vector of com position by appending the com height\n",
-    "   realCoM,_ =  #todo: receive the base position and orientation (use pybullet documentation for finding the related function) \n",
-    "   CoMVel,_ =  #todo: receive the base velocity \n",
-    "   realDCM =  #todo: calculate real dcm of the robot\n",
+    "   realCoM,_ = p.getBasePositionAndOrientation() #todo: receive the base position and orientation (use pybullet documentation for finding the related function) \n",
+    "   CoMVel,_ =  p.getBaseVelocity(robotID) #todo: receive the base velocity \n",
+    "   realDCM =  realCoM + CoMVel/DCMGenerator.omega #todo: calculate real dcm of the robot\n",
     "\n",
     "   #We consider for activating push recovery to avoid flunctuation and If DCM error is less than a threshold we will use desired DCM value\n",
     "   if np.linalg.norm(DesiredDCM - realDCM[:2]) < 0.2:\n",
@@ -506,17 +522,19 @@
     "\n",
     "   duration_max = NominalStepDuration + deltaStepDurationMax\n",
     "   duration_min = max(0,NominalStepDuration - deltaStepDurationMin)\n",
-    "   SigmaNoM =   #todo: #nominal sigma (function of NominalStepDuration)\n",
+    "   SigmaNoM = math.exp(DCMGenerator.omega * NominalStepDuration) # todo: #nominal sigma (function of NominalStepDuration)  #todo: #nominal sigma (function of NominalStepDuration)\n",
     "\n",
+    "   boundary_limit = 0.4\n",
+    "   \n",
     "   #make a boundry limit for the next step position and duration \n",
-    "   CoPTMaxX = CoPNoMX+ #todo next step position maximum constraits for x,  add a value and tune it to have simulation working\n",
-    "   CoPTMaxY = CoPNoMY+  #todo next step position maximum constraits for y, add a value and tune it to have simulation working\n",
+    "   CoPTMaxX = CoPNoMX+boundary_limit #todo next step position maximum constraits for x,  add a value and tune it to have simulation working\n",
+    "   CoPTMaxY = CoPNoMY+boundary_limit  #todo next step position maximum constraits for y, add a value and tune it to have simulation working\n",
     "   \n",
-    "   CoPTMinX = CoPNoMX- #todo next step position minimum constrait for x, add a value and tune it to have simulation working\n",
-    "   CoPTMinY = CoPNoMY-  #todo next step position minimum constrait for y, add a value and tune it to have simulation working\n",
+    "   CoPTMinX = CoPNoMX-boundary_limit #todo next step position minimum constrait for x, add a value and tune it to have simulation working\n",
+    "   CoPTMinY = CoPNoMY-boundary_limit  #todo next step position minimum constrait for y, add a value and tune it to have simulation working\n",
     "   \n",
-    "   SigmaMin =  #todo: use NominalStepDuration and deltaStepDurationMin\n",
-    "   SigmaMax =  #todo: use NominalStepDuration and deltaStepDurationMax\n",
+    "   SigmaMin = math.exp(DCMGenerator.omega * duration_min) #todo: use NominalStepDuration and deltaStepDurationMin\n",
+    "   SigmaMax = math.exp(DCMGenerator.omega * duration_max) #todo: use NominalStepDuration and deltaStepDurationMax\n",
     "\n",
     "   DCMGenerator.CoP = np.array([CoPX ,CoPY]) #update the initial CoP position in the DCMTrajectoryGenerator\n",
     "   \n",
@@ -524,22 +542,42 @@
     "    #todo: make Hessian, Gradient and Constraints matrix of QP based on equations 13,14,15 and 16, \n",
     "    #you can expand these equations to find the follwoing matrices \n",
     "   # todo: use equation 14 and 16 to find the P and Q \n",
-    "   P = np.array([])\n",
-    "   q = np.array([]) \n",
+    "   P = np.array([\n",
+    "        [alphaCoPX, 0, 0, 0, 0],\n",
+    "        [0, alphaCoPY, 0, 0, 0],\n",
+    "        [0, 0, alphaSigma, 0, 0],\n",
+    "        [0, 0, 0, alphaOffsetX, 0],\n",
+    "        [0, 0, 0, 0, alphaOffsetY]\n",
+    "    ])\n",
+    "   q = np.array([\n",
+    "        alphaCoPX * CoPNoMX,\n",
+    "        alphaCoPY * CoPNoMY,\n",
+    "        alphaSigma * SigmaNoM,\n",
+    "        alphaOffsetX * OffsetNoMX,\n",
+    "        alphaOffsetY * OffsetNoMY\n",
+    "   ]) \n",
     "\n",
     "   # todo: use equation 15 and 16 to find the G and h \n",
-    "   G = np.array([])\n",
-    "   h = np.array([])\n",
+    "   I2 = np.eye(2)\n",
+    "   I1 = np.eye(1)\n",
+    "   \n",
+    "   G = np.block([\n",
+    "      [ I2, np.zeros((2, 1)), np.zeros((2, 2))],\n",
+    "      [-I2, np.zeros((2, 1)), np.zeros((2, 2))],\n",
+    "      [np.zeros((1, 2)), I1, np.zeros((1, 2))],\n",
+    "      [np.zeros((1, 2)), -I1, np.zeros((1, 2))]\n",
+    "   ])\n",
+    "   h = np.array([CoPTMaxX,CoPTMaxY,-CoPTMinX,-CoPTMinY,SigmaMax, -SigmaMin])\n",
     "\n",
     "   # todo: use equation 13 and 16 to find the A and b  \n",
-    "   A = np.array([])\n",
-    "   b = np.array([])\n",
+    "   A = np.array([[1, 0, CoPX - DCMGenerator.initialDCM[0], 1, 0],[0, 1, CoPY - DCMGenerator.initialDCM[1], 0, 1]])\n",
+    "   b = np.array([CoPX, CoPY])\n",
     "   \n",
     "   #solve QP problem U is the vector of optimized parameters\n",
     "   U = solve_qp(P, q, G, h, A, b, solver=\"osqp\")\n",
     "   Ux_planned.append(U[0])\n",
     "   Uy_planned.append(U[1])\n",
-    "   stepDuration = #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
+    "   stepDuration = np.log(U[2])/DCMGenerator.omega #todo: find the step duration based on the the optimized sigma (use Log function to find step duration)\n",
     "   \n",
     "   FootRecovery = FootTrajectoryRecovery((stepDuration + dt * internalStep), maximumFootHeight)\n",
     "   CoMRealTrajectory.append(np.asarray(realCoM))\n",
@@ -598,8 +636,8 @@
     "         break\n",
     "\n",
     "      internalStep=0\n",
-    "      CoMPoS, robotOrn =   #todo: receive the base position and orientation (use pybullet documentation for finding the related function) \n",
-    "      CoMVel,_ =  #todo: receive the base velocity \n",
+    "      CoMPoS, robotOrn = p.getBasePositionAndOrientation(robotID) #todo: receive the base position and orientation (use pybullet documentation for finding the related function) \n",
+    "      CoMVel,_ = p.getBaseVelocity(robotID) #todo: receive the base velocity \n",
     "      DCM_step =  CoMPoS + np.asarray(CoMVel)/math.sqrt(9.81/CoMHeight) \n",
     "      CoM_step = np.asarray(CoMPoS)\n",
     "      DCMGenerator.CoM = np.array([CoM_step[0] ,CoM_step[1]])\n",
