--- a/DCM-Locomotion.ipynb
+++ b/DCM-Locomotion.ipynb
@@ -478,10 +478,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "aac3700b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "error",
+     "evalue": "Not connected to physics server.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[7], line 150\u001b[0m\n\u001b[0;32m    147\u001b[0m jointsPositions[\u001b[38;5;241m18\u001b[39m:\u001b[38;5;241m24\u001b[39m] \u001b[38;5;241m=\u001b[39m lowerBodyJoints[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m6\u001b[39m]\n\u001b[0;32m    149\u001b[0m \u001b[38;5;66;03m# apply joint position on the robot (it will automatically implement joint PD)\u001b[39;00m\n\u001b[1;32m--> 150\u001b[0m \u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetJointMotorControlArray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mbodyIndex\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mrobotID\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    151\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mjointIndices\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mjointsIndex\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mastype\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    152\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mcontrolMode\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mPOSITION_CONTROL\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m    153\u001b[0m \u001b[43m                           \u001b[49m\u001b[43mtargetPositions\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mjointsPositions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    154\u001b[0m p\u001b[38;5;241m.\u001b[39mstepSimulation()\n\u001b[0;32m    155\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(dt)\n",
+      "\u001b[1;31merror\u001b[0m: Not connected to physics server."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "DBG_LIMITED_STEPS = False\n",
     "MAX_STEPS = 100\n",
@@ -499,10 +522,10 @@
     "         box_exists = True\n",
     "          \n",
     "      gemPos, gemOrn = p.getBasePositionAndOrientation(gemId)\n",
-    "      force = np.array([873 ,0 ,0])\n",
+    "      force = np.array([1200 ,0 ,1200])\n",
     "      p.applyExternalForce(objectUniqueId=gemId, linkIndex=-1,forceObj=force, posObj=gemPos, flags=p.WORLD_FRAME)\n",
     "      gemPos2, gemOrn2 = p.getBasePositionAndOrientation(gemId2)\n",
-    "      force2 = np.array([0 ,1403 ,0])\n",
+    "      force2 = np.array([0 ,2200 ,0])\n",
     "      p.applyExternalForce(objectUniqueId=gemId2, linkIndex=-1,forceObj=force2, posObj=gemPos2, flags=p.WORLD_FRAME)\n",
     "\n",
     "   DesiredDCM =  DCMGenerator.getDCMTrajectory(dt) #todo: get the desired DCM for the next time-step \n",
@@ -586,7 +609,7 @@
     "   h = np.array([CoPTMaxX,CoPTMaxY,-CoPTMinX,-CoPTMinY,SigmaMax, -SigmaMin])\n",
     "\n",
     "   # todo: use equation 13 and 16 to find the A and b  \n",
-    "   A = np.array([[1, 0, CoPX - DCMGenerator.initialDCM[0], 1, 0],[0, 1, CoPY - DCMGenerator.initialDCM[1], 0, 1]])\n",
+    "   A = np.array([[1, 0, CoPX - currentDCM[0], 1, 0],[0, 1, CoPY - currentDCM[1], 0, 1]])\n",
     "   b = np.array([CoPX, CoPY])\n",
     "   \n",
     "   #solve QP problem U is the vector of optimized parameters\n",
